--- a/src/css/content.scss
+++ b/src/css/content.scss
@@ -6,10 +6,12 @@
 
 
 .content_danhmuc  {
-    display: grid;
-    grid-template-columns: repeat(6, 0.5fr);
-    justify-content: center;
+    display: flex;
+    flex-flow: row wrap;
     align-items: center;
+    justify-content: center;
+    width: calc(100% - 1rem);
+    gap: 0.5rem;
     text-align: center;
     img {
         height: 10rem;
