--- a/src/css/slide.scss
+++ b/src/css/slide.scss
@@ -1,71 +1,82 @@
 @import '~bootstrap/scss/bootstrap';
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-.container-slide{
-    
+
+.container-slide {
+
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
-    
-    .body-shopee{
+
+    .body-shopee {
         padding-top: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 80%;
         height: 20%;
-        .top-left-shopee{
-            img{
+
+        .top-left-shopee {
+            img {
                 height: 20.5rem;
                 width: 30rem;
             }
         }
-        .top-right-shopee{
-            
+
+        .top-right-shopee {
+
             display: flex;
             flex-direction: column;
             height: max-content;
             gap: 0.5rem;
             margin-left: 0.5rem;
         }
-        .top-right-shopee img{
-           width: 20rem;
-              height: 10rem;
-            
+
+        .top-right-shopee img {
+            width: 20rem;
+            height: 10rem;
+
         }
     }
-    .sale-shopee{
-        display: grid;
-        grid-template-columns: auto auto auto auto auto auto auto ;
-        align-items: center;
+
+    .sale-shopee {
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        gap: 4.3rem;
+        padding: 1rem;
+        width: calc(81% - 1rem);
+        // width: calc(100% - 1rem); /* Hiển thị các hàng sản phẩm trên 1 dòng */ 1 cách tự động
+        flex-wrap: wrap;
+        
+        color: black;
+        background-color: #E79911;
+        margin: 1rem 0;
+        text-align: center;
+        align-self: center;
         justify-content: center;
-        width: 80%;
-        height: max-content;
-        gap:3rem;
-        background-color: antiquewhite;
-        margin-top: 1rem;
         a{
-            padding: 1rem;
-            width: 80%;
             text-decoration: none;
-            color: black;
+            color: white;
         }
-        .sale img{
+        .sale img {
             width: 3rem;
             height: 3rem;
         }
-        .sale img:hover{
+
+        .sale img:hover {
             transform: scale(1.1);
         }
-        .sale p{
+
+        .sale p {
             font-size: small;
             margin-bottom: 0;
         }
     }
 }
-
-
