--- a/src/reponsive-css/AllproductReponsive.scss
+++ b/src/reponsive-css/AllproductReponsive.scss
@@ -1,23 +1,24 @@
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
     .all_products {
         display: grid;
-        grid-template-columns: auto auto ;
+        grid-template-columns: auto auto;
         justify-content: space-around;
         text-align: center;
-        padding: 0 1rem ;
-    margin: 0 ;
-        gap: 1rem;
+        padding: 1rem;
+        margin: 0rem;
+        gap: 0.5rem;
         text-align: center;
-    
+
         .product {
-            width: 11.6rem;
+            width: 10rem;
             text-decoration: none;
             color: black;
+
             img {
-                height: 10rem;
+                height: 5rem;
                 width: auto;
             }
-    
+
             p {
                 width: 100%;
                 overflow: hidden;
@@ -25,22 +26,27 @@
                 white-space: nowrap;
                 width: 90%;
             }
-    
+
             span {
                 color: red;
-              
+
             }
         }
+
         .product:hover {
-            border: 0.5px solid red; /* Hiển thị viền đỏ khi hover vào */
+            border: 0.5px solid red;
+            /* Hiển thị viền đỏ khi hover vào */
         }
-        .progress{
+
+        .progress {
             background-color: #FFBDA6;
             position: relative;
-            .progress-bar{
+
+            .progress-bar {
                 background-color: #ED2216;
             }
-            .progress-title{
+
+            .progress-title {
                 position: absolute;
                 color: white;
                 text-align: center;
@@ -49,5 +55,5 @@
             }
         }
     }
-    
+
 }
