hoan thien du an

--- a/src/css/slide.scss
+++ b/src/css/slide.scss
@@ -24,7 +24,7 @@
         .top-left-shopee {
             img {
                 height: 20.5rem;
-                width: 30rem;
+                width: 100%;
             }
         }
 
