--- a/src/css/catory.scss
+++ b/src/css/catory.scss
@@ -1,31 +1,54 @@
 .items_danhmuc{
-    display: grid;
-    grid-template-columns: auto auto auto auto ;
-    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: calc(100% - 0.5rem);
+    // width: calc(100% - 1rem); /* Hiển thị các hàng sản phẩm trên 1 dòng */ 1 cách tự động
+    flex-wrap: wrap;
 
-    padding: 0  9rem;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    padding: 0 auto
+    ;
     margin: 0 auto;
     gap: 1rem;
     text-align: center;
-
+    img{
+        height: 11rem;
+        width: 11rem;
+    }
+    h3{
+        //hiển thị chữ trên 1 dòng
+        
+        
+        width: 95%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        font-size: medium;
+                
+    }
     
     h5{
         color: #ED2216;
     }
     .progress{
         background-color: #FFBDA6;
-        width: 80%;
+        position: relative;
+        text-align: center;
+        width: 15rem;
         margin: 0 auto;
         .progress-bar{
-            position: relative;
             background-color: #ED2216;
         }
         .progress-title{
-       
-           
+            
+            text-align: right;
             position: absolute;
             color: white;
-            padding: 0 2.5rem;
+            padding: 0 3.5rem;
             font-weight: 700;
             text-transform: uppercase;
         }
