--- a/src/reponsive-css/slideCoponent.scss
+++ b/src/reponsive-css/slideCoponent.scss
@@ -33,7 +33,7 @@
 
                 img {
                     height: 10rem;
-                    width: auto;
+                    width: 100%;
                 }
             }
 
